erDiagram
    %% SCHEMA form: catalogo de cuestionarios (definicion del instrumento)
    %% Fuente: reference_projects/reference_questionnaire_v1_legacy/FormsFlow2.drawio (pestana "Página-1")
    %% Todas las tablas heredan de BaseModel (agregados automaticamente, no se listan):
    %%   id Integer PK interno incremental, uuid UUID externo, created_at, updated_at, deleted_at, *_by_id_user
    %% Solo se listan las columnas especificas de cada entidad.
    %% Las FK referencian el id Integer interno de la tabla destino.
    %% Excepcion (decision de diseno): las tablas puente N:N conservan id propio.

    %% ============ RELACIONES ============
    form ||--o{ reference : "documented_by"
    form ||--o{ form_condition : "gated_by"
    form ||--o{ form_categories : "classified_as"
    form_categories }o--|| category : "groups"
    form ||--o{ estimated_duration : "estimated_in"
    form ||--o{ target_age_groups : "targets_ages"
    target_age_groups }o--|| age_group : "groups"
    form ||--o{ section : "has"
    form ||--o{ questions_form : "asks"
    questions_form }o--|| question : "includes"
    section ||--o{ questions_section : "groups"
    questions_section }o--|| question : "includes"
    question ||--o{ option : "offers"
    option ||--o| url : "links_to"
    question ||--o{ conditional_logic : "gated_by"
    form ||--o{ target_sex : "restricts_sex"
    form ||--o{ form_population : "applies_to"
    form_population }o--|| population : "targets"
    form ||--o{ form_cie11_codes : "coded_with"
    form_cie11_codes }o--|| cie11_code : "codes"
    form ||--o{ form_evaluation_topics : "evaluates"
    form_evaluation_topics }o--|| evaluation_topic : "topic_of"

    %% ============ ENUMS ============
    %% EBiologicalSex: compartido con schema health_profile (HOMBRE=1, MUJER=2, INTERSEXUAL=3)
    EBiologicalSex {
        Integer HOMBRE "1"
        Integer MUJER "2"
        Integer INTERSEXUAL "3"
    }

    %% EQuestionType: tipos de pregunta (segun referencia app_questionnaire)
    EQuestionType {
        String TEXT "TEXT"
        String TEXT_LONG "TEXT_LONG"
        String NUMBER "NUMBER"
        String SINGLE_CHOICE "SINGLE_CHOICE"
        String MULTIPLE_CHOICE "MULTIPLE_CHOICE"
        String DATE "DATE"
        String DATE_TIME "DATE_TIME"
        String TIMER "TIMER"
    }

    %% EUrlType: tipo de recurso enlazado
    EUrlType {
        String LINK "LINK"
        String FILE "FILE"
        String IMAGE "IMAGE"
    }

    %% ============ ENTIDADES ============
    form {
        Integer id PK
        String key
        %% name == filename ej: test.frm
        String name
        Text description
    }

    evaluation_topic {
        Integer id PK
        String name
    }

    form_evaluation_topics {
        Integer id PK
        Integer id_form FK
        Integer id_evaluation_topic FK
    }

    reference {
        Integer id PK
        Integer id_form FK
        String url_reference
        String name
        Text notes
        String url_thumbnail
        String type_media
    }

    form_condition {
        Integer id PK
        Integer id_form FK
        Text expression
        Text description
    }

    form_categories {
        Integer id PK
        Integer id_form FK
        Integer id_category FK
    }

    category {
        Integer id PK
        String key_industry
        String name
    }

    estimated_duration {
        %% Alternativa de tipado: duraciones en formato ISO 8601.
        %% Ejemplo: timedelta(days=1, hours=2, minutes=30)
        %% Futuro (IA): sugerir description a partir del resto de los datos y viceversa (f >> description, description >> f)
        Integer id PK
        Integer id_form FK
        Integer min_minutes
        Integer max_minutes
        Text description
    }

    target_age_groups {
        Integer id PK
        Integer id_form FK
        Integer id_age_group FK
    }

    age_group {
        %% Futuro (IA): sugerir "name" a partir de las edades proporcionadas y viceversa
        Integer id PK
        String name
        Integer min_age
        Integer max_age
    }

    section {
        Integer id PK
        Integer id_form FK
        %% name: autoincmetene ej: 1, +1, 2
        String name
        Text description
        Integer order
    }

    questions_form {
        Integer id PK
        Integer id_form FK
        Integer id_question FK
    }

    questions_section {
        Integer id PK
        Integer id_section FK
        Integer id_question FK
    }

    question {
        Integer id PK
        Enum(EQuestionType) type
        Text text
        Integer order
    }

    option {
        Integer id PK
        Integer id_question FK
        String text
        Integer value
        Text help
    }

    url {
        Integer id PK
        Integer id_option FK
        Enum(EUrlType) type
        String url
    }

    conditional_logic {
        %% Semantica: display_this_field_if {variable_name} > 100
        Integer id PK
        Integer id_question FK
        Integer triggered_by_question FK
        String formula
        Text description
    }

    target_sex {
        Integer id PK
        Integer id_form FK
        Enum(EBiologicalSex) type_biological_sex
    }

    form_population {
        Integer id PK
        Integer id_form FK
        Integer id_population FK
    }

    population {
        Integer id PK
        String name
    }

    form_cie11_codes {
        Integer id PK
        Integer id_form FK
        Integer id_cie11_code FK
    }

    cie11_code {
        Integer id PK
        String code
    }

    %% ============ NOTAS DE DISENO ============
    %% redirect_to: es necesario? Para saber a donde redirige despues de elegir una opcion
    %% de respuesta, despues de responder una pregunta, una seccion o un form.
    %% Agregar technical_description o hidden_description, visible solo para roles
    %% distintos al paciente.
